push enhancement api and documentation swagger
