# api/talenta.js
@@ -11,13 +11,13 @@ const router = express.Router();
 
 /**
  * @swagger
- * /bulkSubmit:
+ * /bulk-submit:
  *   post:
  *     tags: [Talenta Service]
  *     summary: Submit timesheet entries to Talenta in bulk
  *     description: Submits tasks to Talenta between given dates (skips weekends).
  */
-router.post("/bulkSubmit", async (req, res) => {
+router.post("/bulk-submit", async (req, res) => {
   try {
     const {
       fromDate,
@@ -25,14 +25,15 @@ router.post("/bulkSubmit", async (req, res) => {
       startTime = "09:00:00",
       endTime = "17:00:00",
       taskId,
+      activity = "",
       holidays = [],
       annualLeave = [],
     } = req.body;
 
-    const cookie = req.headers["cookie"];
-    console.log("Received Cookie:", req.headers["cookie"]);
+    const cookie = req.headers["token"];
+
     if (!cookie)
-      return res.status(400).json({ error: "Missing Cookie in headers" });
+      return res.status(400).json({ error: "Missing Token in headers" });
     if (!fromDate || !toDate)
       return res
         .status(400)
@@ -43,6 +44,7 @@ router.post("/bulkSubmit", async (req, res) => {
       toDate,
       startTime,
       endTime,
+      activity,
       taskId,
       holidays,
       annualLeave,
@@ -52,6 +54,33 @@ router.post("/bulkSubmit", async (req, res) => {
     res.json({ success: true, results });
   } catch (err) {
     console.log(err);
+    res.status(500).json({ error: err.message });
+  }
+});
+
+/**
+ * @swagger
+ * tags:
+ *   name: Talenta Service
+ *   description: Endpoints for get task list
+ */
+
+/**
+ * @swagger
+ * /get-task-list:
+ *   get:
+ *     tags: [Talenta Service]
+ *     summary: Get Talenta Task List
+ *     description: Retrieves the list of tasks from Talenta.
+ */
+router.get("/get-task-list", async (req, res) => {
+  try {
+    const cookie = req.headers["token"];
+    if (!cookie)
+      return res.status(400).json({ error: "Missing Token in headers" });
+    const result = await TalentaService.getTaskList(cookie);
+    res.json({ success: true, data: result });
+  } catch (err) {
     res.status(500).json({ error: err.message });
   }
 });
